--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ types-pillow = "^10.2.0.20240213"
 ruff = "^0.2.2"
 mypy = "^1.8.0"
 huggingface-hub = "^0.21.3"
+pytest = "^8.0.2"
+pytest-asyncio = "^0.23.5.post1"
 
 
 [[tool.poetry.source]]
